Ready for productions

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=
 spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dspesquisa
-spring.datasource.username=postgres
-spring.datasource.password=1234567
+spring.datasource.username=mark
+spring.datasource.password=leave out the rest
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
