--- a/front-web/package.json
+++ b/front-web/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "aos": "^2.3.4",
+    "apexcharts": "^3.20.2",
     "axios": "^0.20.0",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
